<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_dark_purple"
    tools:context=".ResultActivity">


    <View
        android:id="@+id/view2"
        android:layout_width="352dp"
        android:layout_height="381dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="297dp"
        android:layout_height="282dp"
        android:background="@drawable/profilebox"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/name"

        android:textColor="@color/app_light_purple2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:contentDescription="@string/pic"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@drawable/profile_pic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="64dp"
        android:layout_height="18dp"
        android:text="@string/newbie"
        android:textColor="@color/app_under"
        android:textSize="18sp"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="190dp"
        android:layout_height="31dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/Congrat"
        android:textAlignment="center"
        android:textColor="@color/app_dark_purple"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="208dp"
        android:layout_height="111dp"
        android:background="@drawable/table_shape"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="74dp"
        android:layout_height="18dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/numbers2"
        android:textAlignment="center"
        android:textColor="@color/app_dark_purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.347" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="74dp"
        android:layout_height="18dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/minuts"
        android:textAlignment="center"
        android:textColor="@color/app_dark_purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/points1"
        android:textAlignment="center"
        android:textColor="@color/app_dark_purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="2dp"
        android:layout_height="108dp"
        android:background="@drawable/table_line"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="204dp"
        android:layout_height="2dp"
        android:background="@drawable/table_line"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="204dp"
        android:layout_height="2dp"
        android:background="@drawable/table_line"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/results"
        android:textColor="@color/app_dark_purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="74dp"
        android:layout_height="18dp"
        android:text="@string/points"
        android:textColor="@color/app_under"
        android:textSize="18sp"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="74dp"
        android:layout_height="18dp"
        android:text="@string/numbers"
        android:textColor="@color/app_under"
        android:textSize="18sp"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="74dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/time1"
        android:textColor="@color/app_under"
        android:textSize="18sp"
        app:fontFamily="@font/lalezar"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Button
        android:id="@+id/button1"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:text="@string/back"
        android:textColor="@color/app_dark_purple"
        app:backgroundTint="@color/app_white"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button33"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:text="@string/playAgain"
        android:textColor="@color/app_dark_purple"
        app:backgroundTint="@color/app_white"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>