<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_dark_purple"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="309dp"
        android:layout_height="72dp"
        android:background="@drawable/profilebox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textColor="@color/app_light_purple"
        android:textSize="25sp"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="64dp"
        android:layout_height="18dp"
        android:text="@string/newbie"
        android:textColor="@color/app_under"
        android:textSize="18sp"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button1"
        android:layout_width="177dp"
        android:layout_height="58dp"
        android:text="@string/s_game"
        android:textColor="@color/app_dark_purple"
        app:backgroundTint="@color/app_white"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/button3"
        android:layout_width="177dp"
        android:layout_height="58dp"
        android:padding="1dp"
        android:text="@string/h_play"
        android:textColor="@color/app_dark_purple"
        app:backgroundTint="@color/app_white"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/button4"
        android:layout_width="65dp"
        android:layout_height="52dp"
        android:padding="1dp"
        android:text="@string/exit"
        android:textColor="@color/app_dark_purple"
        app:backgroundTint="@color/app_white"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:padding="1dp"
        android:text="@string/info"
        android:textColor="@color/app_dark_purple"
        app:backgroundTint="@color/app_white"
        app:fontFamily="@font/lalezar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="62dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.454"
        app:srcCompat="@drawable/profile_pic"
        android:contentDescription="image_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>